--- a/app/src/main/res/layout/activity_password_settings.xml
+++ b/app/src/main/res/layout/activity_password_settings.xml
@@ -7,15 +7,15 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="0dp"
-        android:theme="@style/Theme.PopupOverlay">
+        android:theme="@style/Theme.PopupOverlay"
+        app:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            app:popupTheme="@style/Theme.PopupOverlay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/background" />
+            android:background="@color/background"
+            android:theme="@style/Theme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -40,17 +40,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="23sp"
-                android:text="알림을 받으시고,\n1일 1일기를 실천해보세요!"
-                android:textColor="@color/font"
                 android:layout_marginBottom="10dp"
-                android:textStyle="bold" />
+                android:textSize="23sp"
+                android:textStyle="bold"
+                android:text="잠금 설정으로\n소중한 일기를 보관해보세요!"
+                android:textColor="@color/font" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="매일 설정한 시간에 알림이 전송됩니다."
+                android:text="지문을 사용하려면 비밀번호 사용을 먼저 선택해주세요.\n지문 인증 실패시 비밀번호가 사용됩니다."
                 android:textColor="@color/pastel_700" />
 
         </LinearLayout>
@@ -66,12 +66,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:text="알림"
+                android:text="비밀번호 사용"
                 android:textColor="@color/font"
                 android:textSize="18sp" />
 
             <Switch
-                android:id="@+id/alarmSwitch"
+                android:id="@+id/pw_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -80,70 +80,70 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/timeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/view"
-            android:padding="20dp"
-            android:visibility="gone">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:textSize="18sp"
-                android:textColor="@color/font"
-                android:text="시간" />
-
-            <TextView
-                android:id="@+id/timeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:textSize="18sp"
-                android:textColor="@color/pastel_700" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5dp"
-            android:text="기타"
-            android:textColor="@color/gray"
-            android:textSize="15sp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:background="@color/background_sub"
             android:padding="20dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="위치 설정 알림"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:text="지문 사용"
                     android:textColor="@color/font"
                     android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/support_fp_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:visibility="gone"
+                    android:text="시스템 지문 등록 필요"
+                    android:textColor="@color/font_sub"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
             <Switch
-                android:id="@+id/locationSwitch"
+                android:id="@+id/finger_print_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/change_pw_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/view"
+            android:padding="20dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="비밀번호 변경"
+                android:textColor="@color/font"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/navigate_next" />
 
         </RelativeLayout>
 
