--- a/app/src/main/res/layout/fragment_option.xml
+++ b/app/src/main/res/layout/fragment_option.xml
@@ -306,7 +306,8 @@
                     android:paddingLeft="20dp"
                     android:paddingTop="15dp"
                     android:paddingRight="20dp"
-                    android:paddingBottom="15dp">
+                    android:paddingBottom="15dp"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
