--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -720,4 +720,56 @@
         <item name="android:fontFamily">@font/font11</item>
     </style>
 
+    <!-- 코트라 희망체 -->
+    <style name="Theme.DiaryProject12" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorAccent">@color/pastel_700</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/background</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- API 23 이상부터 가능(상태바 위의 상태표시줄 색상) -->
+        <item name="android:windowLightStatusBar">false</item>
+        <!-- Customize your theme here. -->
+        <!--custom font-family 적용-->
+        <item name="bottomNavigationStyle">@style/Widget.BottomNavigationView12</item>
+        <item name="android:textViewStyle">@style/customTextViewFontStyle12</item>
+        <item name="android:buttonStyle">@style/customButtonFontStyle12</item>
+        <item name="editTextStyle">@style/customEditTextFontStyle12</item>
+        <item name="radioButtonStyle">@style/customRadioButtonFontStyle12</item>
+        <item name="android:checkboxStyle">@style/customCheckboxFontStyle12</item>
+        <item name="android:spinnerStyle">@style/customSpinnerFontStyle12</item>
+        <item name="mcv_headerTextAppearance">@style/customCalenderHeaderFontStyle12</item>
+        <item name="mcv_dateTextAppearance">@style/customCalenderHeaderFontStyle12</item>
+    </style>
+    <style name="Widget.BottomNavigationView12" parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/font12</item>
+    </style>
+    <style name="customCalenderHeaderFontStyle12">
+        <item name="android:fontFamily">@font/font12</item>
+    </style>
+    <style name="customTextViewFontStyle12" parent="@android:style/Widget.DeviceDefault.TextView">
+        <item name="android:fontFamily">@font/font12</item>
+    </style>
+    <style name="customButtonFontStyle12" parent="@android:style/Widget.DeviceDefault.Button.Borderless">
+        <item name="android:fontFamily">@font/font12</item>
+    </style>
+    <style name="customEditTextFontStyle12" parent="@android:style/Widget.DeviceDefault.EditText">
+        <item name="android:fontFamily">@font/font12</item>
+    </style>
+    <style name="customRadioButtonFontStyle12" parent="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton">
+        <item name="android:fontFamily">@font/font12</item>
+    </style>
+    <style name="customCheckboxFontStyle12" parent="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox">
+        <item name="android:fontFamily">@font/font12</item>
+    </style>
+    <style name="customSpinnerFontStyle12" parent="Widget.AppCompat.Spinner">
+        <item name="android:fontFamily">@font/font12</item>
+    </style>
+
 </resources>
