--- a/app/src/main/res/layout/activity_darkmode.xml
+++ b/app/src/main/res/layout/activity_darkmode.xml
@@ -19,87 +19,93 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="@color/background"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:background="@color/background_sub"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="30dp"
-            android:paddingBottom="30dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:textSize="23sp"
-                android:textStyle="bold"
-                android:text="눈이 편해지는\n다크 모드를 사용해보세요!"
-                android:textColor="@color/font" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="시스템 설정을 선택하시면,\n휴대폰 내 설정에 따라 라이트, 다크 모드가 적용됩니다."
-                android:textColor="@color/pastel_700" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/background_sub"
-            android:padding="20dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:orientation="vertical">
-
-            <RadioGroup
-                android:id="@+id/modeGroup"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:background="@color/background_sub"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="30dp"
+                android:paddingBottom="30dp"
                 android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/systemModeButton"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="23sp"
+                    android:textStyle="bold"
+                    android:text="눈이 편해지는\n다크 모드를 사용해보세요!"
+                    android:textColor="@color/font" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="시스템 설정을 선택하시면,\n휴대폰 내 설정에 따라 라이트, 다크 모드가 적용됩니다."
+                    android:textColor="@color/pastel_700" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/background_sub"
+                android:padding="20dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:orientation="vertical">
+
+                <RadioGroup
+                    android:id="@+id/modeGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
-                    android:textColor="@color/font"
-                    android:text="  시스템 설정"
-                    android:textSize="18sp" />
+                    android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/lightModeButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
-                    android:textColor="@color/font"
-                    android:textSize="18sp"
-                    android:text="  라이트 모드" />
+                    <RadioButton
+                        android:id="@+id/systemModeButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:textColor="@color/font"
+                        android:text="  시스템 설정"
+                        android:textSize="18sp" />
 
-                <RadioButton
-                    android:id="@+id/darkModeButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/font"
-                    android:textSize="18sp"
-                    android:text="  다크 모드" />
+                    <RadioButton
+                        android:id="@+id/lightModeButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:textColor="@color/font"
+                        android:textSize="18sp"
+                        android:text="  라이트 모드" />
 
-            </RadioGroup>
+                    <RadioButton
+                        android:id="@+id/darkModeButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font"
+                        android:textSize="18sp"
+                        android:text="  다크 모드" />
+
+                </RadioGroup>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
