--- a/app/src/main/res/layout/item_photo_detail.xml
+++ b/app/src/main/res/layout/item_photo_detail.xml
@@ -4,8 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.github.chrisbanes.photoview.PhotoView
-        android:id="@+id/photoView"
+<!--    <com.github.chrisbanes.photoview.PhotoView-->
+<!--        android:id="@+id/photoView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
+
+    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
+        android:id="@+id/scale_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
