--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -69,38 +69,12 @@
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:id="@+id/bookmark_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="8dp"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/starImageView"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_marginBottom="2dp"
-                            app:srcCompat="@drawable/star" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="즐겨찾기"
-                            android:textColor="@color/yellow"
-                            android:textSize="6sp" />
-
-                    </LinearLayout>
                 </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="2dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/timeTextView"
@@ -114,14 +88,41 @@
 
                     <ImageView
                         android:id="@+id/existPictureImageView"
-                        android:layout_width="12dp"
-                        android:layout_height="12dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
                         android:layout_marginLeft="7dp"
                         android:layout_gravity="center_vertical"
                         android:src="@drawable/exist_picture" />
 
                 </LinearLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/bookmark_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="8dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/starImageView"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginBottom="2dp"
+                    app:srcCompat="@drawable/star" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="즐겨찾기"
+                    android:textColor="@color/yellow"
+                    android:textSize="6sp" />
+
+            </LinearLayout>
+
         </RelativeLayout>
 
         <TextView
@@ -132,7 +133,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:lineSpacingExtra="3dp"
+            android:lineSpacingExtra="1.5dp"
             android:text="내용"
             android:maxLines="3"
             android:ellipsize="end"
@@ -308,7 +309,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:lineSpacingExtra="3dp"
+                android:lineSpacingExtra="1.5dp"
                 android:text="내용"
                 android:maxLines="3"
                 android:ellipsize="end"
